# rustbar

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: main.yml
src/: bar.rs  config.rs  main.rs
src/modules/: audio.rs  battery.rs  bluetooth.rs  clock.rs  mod.rs  workspaces.rs
