[package]
name = "rustbar"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
smithay-client-toolkit = { version = "0.18", features = ["calloop"] }
cairo-rs = {version = "0.18", default-features = false} 
chrono = "0.4"
niri-ipc = "26.4.0"
tokio = {version = "1.52.3", features = ["rt", "net", "time"]}
bluer = {version = "0.17.4", features = ["bluetoothd"]}
calloop = "0.12.4"
